[bumpversion]
current_version = 0.7.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:solcast/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[options]
packages = find
install_requires = 
	schedule
	anyconfig
	Pyyaml
	requests
	isodate

[options.package_data]
sample = templates/*.j2, config/*.yml

[pycodestyle]
max-line-length = 120
statistics = True

