[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[options]
packages = find:
install_requires = 
	Pyyaml
	requests
	isodate
setup_requires =
    pytest-runner
	setuptools_scm

[options.package_data]
pysolcast = templates/*.j2, config/*.yml

[pycodestyle]
max-line-length = 120
statistics = True
